first pass at fbf for K=20

--- a/manifold/manifold.tex
+++ b/manifold/manifold.tex
@@ -61,6 +61,12 @@ For controls we could use:
 \item Codec 2 3200 - this uses finely quantised LSPs that preserve formant shapes (and a post filter). 
 \end{enumerate}
 
+\section{Results}
+
+Table, headphones, speaker, preference of author, 4 samples
+
+Note $K=80$ better than 3200, represent LF better (failing of LPC near DC).
+
 \subsection{Notes and Further Work}
 
 Notes:
