found bug in energy distribution, new plots and write up

--- a/manifold/big_dog_f165_k79.tex
+++ b/manifold/big_dog_f165_k79.tex
@@ -1,10 +1,10 @@
 % Title: gl2ps_renderer figure
 % Creator: GL2PS 1.4.2, (C) 1999-2020 C. Geuzaine
 % For: Octave
-% CreationDate: Mon Oct 30 12:29:18 2023
+% CreationDate: Tue Oct 31 10:52:33 2023
 \setlength{\unitlength}{1pt}
 \begin{picture}(0,0)
-\includegraphics[scale=1]{big_dog_f61_k20-inc}
+\includegraphics[scale=1]{big_dog_f165_k79-inc}
 \end{picture}%
 \begin{picture}(300,250)(0,0)
 \fontsize{6}{0}\selectfont\put(39,22.8203){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{0}}}}
@@ -18,7 +18,7 @@
 \fontsize{6}{0}\selectfont\put(35.8831,185.972){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{60}}}}
 \fontsize{6}{0}\selectfont\put(35.8831,231.25){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{80}}}}
 \fontsize{5}{0}\selectfont\put(221.495,216.245){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{Sw}}}}
-\fontsize{5}{0}\selectfont\put(221.495,206.243){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{rate K=20 B}}}}
-\fontsize{5}{0}\selectfont\put(221.495,196.241){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{rate K=20 B hat}}}}
-\fontsize{5}{0}\selectfont\put(221.495,185.239){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{Eq 1.44dB*dB}}}}
+\fontsize{5}{0}\selectfont\put(221.495,206.243){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{rate K=80 Y}}}}
+\fontsize{5}{0}\selectfont\put(221.495,196.241){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{rate K=80 Y hat}}}}
+\fontsize{5}{0}\selectfont\put(221.495,185.239){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{Eq 7.24dB*dB}}}}
 \end{picture}
